# osrs-drops

./: .gitignore  index.html
.github/workflows/: deploy.yml
assets/: drop_sim_bg-OcJCmNYx.wasm  index-Crs-hgon.js  index-DrKrwDqr.css  sim.worker-LFvKNLAU.js
drop-sim/: Cargo.toml
drop-sim/src/: lib.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  sim.worker.ts  simulation.wgsl  webgpu-sim.ts
frontend/src/components/: HistogramDisplay.tsx  ResultsDisplay.tsx  SimulationControls.tsx
frontend/src/components/Layout/: Shell.tsx
frontend/src/pages/: Dashboard.tsx
